--- a/src/main/resources/templates/chart/index.html
+++ b/src/main/resources/templates/chart/index.html
@@ -11,7 +11,7 @@
 <body>
     <div layout:fragment="content" class="container">
         <h1 style="text-align: center">CHART TEST</h1>
-        <canvas id="myChart" style="max-width: 800px; max-height: 400px; background: lightgray"></canvas>
+        <canvas id="myChart" style="max-width: 100%; max-height: 600px; background: lightgray"></canvas>
         <script id="chart" th:value="${reportName}" src="js/chart.js">
 
             // var ctx = document.getElementById('myChart').getContext('2d');
