Dodanei Selekts: Pole wyboru typu wykresu pole wyboru raportu

--- a/src/main/resources/templates/chart/index.html
+++ b/src/main/resources/templates/chart/index.html
@@ -13,6 +13,27 @@
         <h1 style="text-align: center">CHART TEST</h1>
         <div id="parametr" th:value="${parametr}" ></div>
         <div id="typeChart" th:value="${typeChart}" ></div>
+
+        <form th:action="@{/chart}" method="post" th:name="typeChart">
+            <div style="float: left">
+                <select th:name="typeChart" th:value="${typeChart}">
+                    <option th:value="bar" th:text="bar" th:selected ="${typeChart} == 'bar'"></option>
+                    <option th:value="line" th:text="line" th:selected ="${typeChart} == 'line'"></option>
+                    <option th:value="polarArea" th:text="'polarArea'" th:selected ="${typeChart} == 'polarArea'"></option>
+                    <option th:value="doughnut" th:text="'doughnut'" th:selected ="${typeChart} == 'doughnut'"></option>
+                </select>
+                <select th:name="report">
+                    <option th:each="report : ${reports}"
+                            th:value="${report.name}"
+                            th:text="${report.name}"
+                            th:selected="${report.name} == ${reportName}">
+                    </option>
+                </select>
+            </div>
+            <div style="float: left; margin-left: 10px">
+                <p> <input type="submit" value="Select" class="btn btn-sm btn-primary"></p>
+            </div>
+        </form>
         <script id="chart" th:value="${reportName}" src="js/chart.js" async type="text/javascript">
 
             // var ctx = document.getElementById('myChart').getContext('2d');
