--- a/src/main/resources/templates/note/collection/notes.html
+++ b/src/main/resources/templates/note/collection/notes.html
@@ -8,12 +8,14 @@
     <title>Country</title>
 </head>
 <body>
-    <div layout:fragment="content" class="container">
+    <div layout:fragment="content"  class="container" style="background: aliceblue">
        <H2 style="text-align: center" >NOTES COLECTION</H2>
         <H4 th:text="${notes[0].currencies.currencySeries}" style="text-align: center" ></H4>
 <!--        <div th:replace="fragments/_flag :: flag(country = ${currencyByStatusList[0].countryEn})"></div>-->
         <div th:replace="fragments/_flag :: flag(country = ${notes[0].currencies.countries.countryEn})"></div>
-
+        <div style="display: flex;">
+            <a th:replace="fragments/button/_button-back :: back(back = '/note/collection/currency/?selectCountryId=' + ${notes[0].currencies.countries.id})"></a>
+        </div>
         <div class="form-row align-items-center">
             <div class="form-row align-items-center">
                 <th:block th:each="note : ${notes}">
