--- a/src/main/resources/templates/country/index.html
+++ b/src/main/resources/templates/country/index.html
@@ -14,17 +14,14 @@
         <table class="table table-striped table-bordered table-hover table-sm">
             <thead class="thead-dark">
             <tr>
-<!--                <th>CON</th>-->
                 <th>Lp:</th>
                 <th>ID</th>
                 <th>
                     <a th:href="@{'/page/' + ${currentPage} + '?sortField=continents.continentEn&sortDir=' + ${reverseSortDir}}">Con</a>
                 </th>
-<!--                <th>Continent</th>-->
                 <th>
                     <a th:href="@{'/page/' + ${currentPage} + '?sortField=continent&sortDir=' + ${reverseSortDir}}">Continent</a>
                 </th>
-<!--                <th>Country EN</th>-->
                 <th>
                     <a th:href="@{'/page/' + ${currentPage} + '?sortField=countryEn&sortDir=' + ${reverseSortDir}}">Country EN</a>
                 </th>
@@ -47,7 +44,10 @@
                     <td th:text="${country.capital_city}" class="pt-1 pb-1"></td>
                     <td th:text="${country.description}" class="pt-1 pb-1" style="font-size: 12px"></td>
                     <td class="pt-1 pb-1">
-                        <a th:href="@{'/country/show/' + ${country.id}}" class="btn btn-sm btn-info" style="font-size: 10px">SHOW</a>
+                        <a th:href="@{'/country/show/' + ${country.id}}" class="btn btn-sm btn-info" style="font-size: 10px" data-toggle="modal" th:attr="data-target='#Country' + ${country.id}" >SHOW</a>
+                        <div class="modal fade" th:attr="id= 'Country' + ${country.id}"  tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div th:replace="country/_showModal :: showModal"></div>
+                        </div>
                         <a th:href="@{'/country/edit/' + ${country.id}}" class="btn btn-sm btn-primary" style="font-size: 10px">EDIT</a>
                         <a th:href="@{'/country/delete/' + ${country.id}}" class="btn btn-sm btn-danger" style="font-size: 10px">DELETE</a>
                     </td>
