--- a/src/main/resources/templates/note/forSell/notes.html
+++ b/src/main/resources/templates/note/forSell/notes.html
@@ -9,6 +9,9 @@
 <body>
     <div layout:fragment="content" class="container">
         <h1 style="text-align: center">Notes</h1>
+        <div style="display: flex;">
+            <a th:replace="fragments/button/_button-back :: back(back = '/note/forSell')"></a>
+        </div>
         <div class="container">
             <Block th:each="note : ${forSellNotesList}">
                 <div class="container row bg-sell" style="background: lightgray; border-bottom: solid;border-color: darkgray;">
@@ -18,11 +21,21 @@
                     <div class="col-md-3">
                         <div class="modal-body row" style=" margin: 0px;">
                             <div style="float: left; text-align: center; padding: 10px 10px 10px 10px">
-                                <img th:src="${note.aversPath}" style="max-width: 100%; max-height: 150px"/>
+                                <a class="btn" style="font-size: 10px" data-toggle="modal" th:attr="data-target='#NoteAvers' + ${note.noteId}" >
+                                    <img th:src="${note.aversPath}" style="max-width: 100%; max-height: 150px"/>
+                                </a>
+                                <div class="modal fade" th:attr="id= 'NoteAvers' + ${note.noteId}"  tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                    <div th:replace="note/forSell/_showModal :: showModal(image = ${note.aversPath})"></div>
+                                </div>
                             </div>
                             <hr class="my-2" style="border-color: black; width: 100%">
                             <div style="float: left;  text-align: center; padding: 10px 10px 10px 10px">
-                                <img th:src="${note.reversePath}" style="max-width: 100%; max-height: 150px"/>
+                                <a class="btn" style="font-size: 10px" data-toggle="modal" th:attr="data-target='#NoteReverse' + ${note.noteId}" >
+                                    <img th:src="${note.reversePath}" style="max-width: 100%; max-height: 150px"/>
+                                </a>
+                                <div class="modal fade" th:attr="id= 'NoteReverse' + ${note.noteId}"  tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                    <div th:replace="note/forSell/_showModal :: showModal(image = ${note.reversePath})"></div>
+                                </div>
                             </div>
                             <hr class="my-2" style="border-color: black; width: 100%">
                         </div>
@@ -69,11 +82,11 @@
                 </div>
             </Block>
         </div>
-        <script>
-            $(document).ready(function(){
-                $('[data-toggle="tooltip"]').tooltip();
-            });
-        </script>
+<!--        <script>-->
+<!--            $(document).ready(function(){-->
+<!--                $('[data-toggle="tooltip"]').tooltip();-->
+<!--            });-->
+<!--        </script>-->
 
     </div>
 
