Dodano: controler coinForSell Widoki do coinForSell Zapytanie SQL getCoinsByStatus

--- a/src/main/resources/templates/layouts/header.html
+++ b/src/main/resources/templates/layouts/header.html
@@ -52,7 +52,7 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" th:href="@{/coin}">Add Coin</a>
                         <a class="dropdown-item" th:href="@{/coin/collection}">Colection</a>
-
+                        <a class="dropdown-item" th:href="@{/coin/forSell}"> Coin For Sell</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
