--- a/src/main/resources/templates/note/newNote/notes.html
+++ b/src/main/resources/templates/note/newNote/notes.html
@@ -36,7 +36,7 @@
                         </td>
                         <td style="width:20%">
                             <a class="btn" style="font-size: 10px" data-toggle="modal" th:attr="data-target='#NoteAvers' + ${note.noteId}" >
-                                <img th:src="${note.aversPath}" style="max-width: 100%; max-height: 150px"/>
+                                <img th:src="${note.reversePath}" style="max-width: 100%; max-height: 150px"/>
                             </a>
                             <div class="modal fade" th:attr="id= 'NoteAvers' + ${note.noteId}"  tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                                 <div th:replace="note/newNote/_showModal :: showModal"></div>
