--- a/src/main/resources/templates/layouts/header.html
+++ b/src/main/resources/templates/layouts/header.html
@@ -41,6 +41,7 @@
                         <a class="dropdown-item" th:href="@{/note}">Add Note</a>
                         <a class="dropdown-item" th:href="@{/note/collection}">Colection</a>
                         <a class="dropdown-item" th:href="@{/note/newNotes}">New Notes</a>
+                        <a class="dropdown-item" th:href="@{/note/future}">Future Notes</a>
                         <a class="dropdown-item" th:href="@{/note/forSell}">Note For Sell</a>
 
                     </div>
