--- a/src/main/resources/templates/currency/_form.html
+++ b/src/main/resources/templates/currency/_form.html
@@ -98,7 +98,7 @@
             <td>
                 <div class="field">
                     <label>Converter</label><br>
-                    <input type="text" th:field="*{converter}" class="form-control form-control-sm" placeholder="iso code"/>
+                    <input type="text" th:field="*{converter}" class="form-control form-control-sm" placeholder="converter np: 1 = 100"/>
                 </div>
             </td>
         </tr>
