--- a/src/main/resources/templates/currency/list.html
+++ b/src/main/resources/templates/currency/list.html
@@ -46,7 +46,9 @@
                     <td th:text="${(i.index + 1)}" class="pt-1 pb-1"></td>
                     <td th:text="${currency.id}" class="pt-1 pb-1"></td>
                     <td th:text="${currency.pattern}" class="pt-1 pb-1"></td>
-                    <td th:text="${currency.currencySeries}" class="pt-1 pb-1" style="font-size: 12px"></td>
+                    <td class="pt-1 pb-1" style="font-size: 12px">
+                        [[${currency.currencySeries}]]  ([[${currency.id}]])
+                    </td>
                     <td class="pt-1 pb-1">
                         <a th:href="@{'/currency/show/' + ${currency.id}}" class="btn btn-sm btn-info" style="font-size: 10px" data-toggle="modal" th:attr="data-target='#currency-' + ${currency.id}" >SHOW</a>
                         <div class="modal fade" th:attr="id= 'currency-' + ${currency.id}"  tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
