--- a/src/main/resources/templates/note/currency.html
+++ b/src/main/resources/templates/note/currency.html
@@ -35,7 +35,7 @@
                             <td th:text="${currency.id}" class="pt-1 pb-1"></td>
                             <td class="pt-1 pb-1">
                                 <a th:href="@{'/note/note_list/?currencySeries=' + ${currency.currencySeries} + '&curId=' + ${currency.id}}" style="color: black">
-                                    [[${currency.currencySeries}]]
+                                    [[${currency.currencySeries}]]  ([[${currency.id}]])
                                 </a>
                             </td>
                             <td th:text="${currency.notes.size}"></td>
