--- a/src/main/resources/templates/note/show.html
+++ b/src/main/resources/templates/note/show.html
@@ -8,69 +8,70 @@
 </head>
 <body>
     <div layout:fragment="content" class="container">
-        <h1 style="text-align: center">NOTE SHOW</h1>
-        <div class="container" style="display: inline-block">
+        <div class="jumbotron">
+            <h1 class="display-4" style="text-align: center">NOTE SHOW</h1>
+            <hr class="my-2">
+            <div class="container" style="display: inline-block">
+                <a th:replace="fragments/button/_button-back :: back(back = '/note/note_list/?currencySeries=' + ${note.currencies.currencySeries} + '&curId=' + ${note.currencies.id})"></a>
 
-            <a th:replace="fragments/button/_button-back :: back(back = '/note/coin_list/?currencySeries=' + ${note.currencies.currencySeries} + '&curId=' + ${note.currencies.id})"></a>
-
-            <a th:replace="fragments/button/_button-edit :: edit(edit = '/note/edit/' + ${note.id})"></a>
-
-        </div>
-        <div class="container">
-            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
-                <div class="col field " style="float: left">
-                    <strong>Id: </strong>
-                    <span th:text="${note.id}"></span><br>
-                    <strong>Date Buy: </strong>
-                    <span th:text="${note.dateBuy}"></span><br>
-                    <strong>Bought: </strong>
-                    <span th:if=" ${note.boughts} != null">
+            </div>
+            <hr class="my-2">
+            <div class="container">
+                <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
+                    <div class="col field " style="float: left">
+                        <strong>Id: </strong>
+                        <span th:text="${note.id}"></span><br>
+                        <strong>Date Buy: </strong>
+                        <span th:text="${note.dateBuy}"></span><br>
+                        <strong>Bought: </strong>
+                        <span th:if=" ${note.boughts} != null">
                         <span th:text="${note.boughts.name}"></span>
                     </span><br>
-                    <strong>Visible: </strong>
-                    <span th:text="${note.visible}"></span><br>
-                    <strong>Created: </strong>
-                    <span th:text="*{#calendars.format(note.created_at,'yyyy-MM-dd HH:mm:ss')}"></span><br>
-                    <strong>Updated: </strong>
-                    <span th:text="*{#calendars.format(note.updated_at,'yyyy-MM-dd HH:mm:ss')}"></span>
-                </div>
-                <div class="col field" style="float: left">
-                    <strong>Denomination: </strong>
-                    <span th:text="${#numbers.formatDecimal(note.denomination,1,0,'COMMA')}"></span>
-                    <span th:text="${note.nameCurrency}"></span><br>
-                    <strong>Data: </strong>
-                    <span th:text="${note.itemDate}"></span><br>
-                    <strong>Series: </strong>
-                    <span th:text="${note.series}"></span><br>
-                    <strong>Making: </strong>
-                    <span th:text="${note.makings.making}"></span><br>
-                    <strong>Image Type</strong>
-                    <span th:text="${note.imageTypes.type}"></span><br>
-                    <strong>Quality: </strong>
-                    <span th:text="${note.qualities.quality}"></span><br>
-                    <strong>Quantity: </strong>
-                    <span th:text="${note.quantity}"></span>
-                    <span th:text="${note.unitQuantity}"></span><br>
-                    <strong> Actives: </strong>
-                    <span th:text="${note.actives.name}"></span>
-                </div>
-                <div class="col field" style="float: left">
-                    <strong>Width: </strong>
-                    <span th:text="${#numbers.formatDecimal(note.width,1,0)} + 'mm'"></span><br>
-                    <strong>Height: </strong>
-                    <span th:text="${#numbers.formatDecimal(note.height,1,0)} + 'mm'"></span><br>
-                    <strong>Price Buy: </strong>
-                    <span th:text="${#numbers.formatDecimal(note.priceBuy,1,2)} + 'zł'"></span><br>
-                    <strong>Price Sell: </strong>
-                    <span th:text="${#numbers.formatDecimal(note.priceSell,1,2)} + 'zł'"></span><br>
-                    <strong>Status: </strong>
-                    <span th:text="${note.statuses.status}"></span><br>
-                    <strong>Status Sell: </strong>
-                    <span th:text="${note.statusSell}"></span>
+                        <strong>Visible: </strong>
+                        <span th:text="${note.visible}"></span><br>
+                        <strong>Created: </strong>
+                        <span th:text="*{#calendars.format(note.created_at,'yyyy-MM-dd HH:mm:ss')}"></span><br>
+                        <strong>Updated: </strong>
+                        <span th:text="*{#calendars.format(note.updated_at,'yyyy-MM-dd HH:mm:ss')}"></span>
+                    </div>
+                    <div class="col field" style="float: left">
+                        <strong>Denomination: </strong>
+                        <span th:text="${#numbers.formatDecimal(note.denomination,1,0,'COMMA')}"></span>
+                        <span th:text="${note.nameCurrency}"></span><br>
+                        <strong>Data: </strong>
+                        <span th:text="${note.itemDate}"></span><br>
+                        <strong>Series: </strong>
+                        <span th:text="${note.series}"></span><br>
+                        <strong>Making: </strong>
+                        <span th:text="${note.makings.making}"></span><br>
+                        <strong>Image Type</strong>
+                        <span th:text="${note.imageTypes.type}"></span><br>
+                        <strong>Quality: </strong>
+                        <span th:text="${note.qualities.quality}"></span><br>
+                        <strong>Quantity: </strong>
+                        <span th:text="${note.quantity}"></span>
+                        <span th:text="${note.unitQuantity}"></span><br>
+                        <strong> Actives: </strong>
+                        <span th:text="${note.actives.name}"></span>
+                    </div>
+                    <div class="col field" style="float: left">
+                        <strong>Width: </strong>
+                        <span th:text="${#numbers.formatDecimal(note.width,1,0)} + 'mm'"></span><br>
+                        <strong>Height: </strong>
+                        <span th:text="${#numbers.formatDecimal(note.height,1,0)} + 'mm'"></span><br>
+                        <strong>Price Buy: </strong>
+                        <span th:text="${#numbers.formatDecimal(note.priceBuy,1,2)} + 'zł'"></span><br>
+                        <strong>Price Sell: </strong>
+                        <span th:text="${#numbers.formatDecimal(note.priceSell,1,2)} + 'zł'"></span><br>
+                        <strong>Status: </strong>
+                        <span th:text="${note.statuses.status}"></span><br>
+                        <strong>Status Sell: </strong>
+                        <span th:text="${note.statusSell}"></span>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
+            <hr class="my-4">
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
                 <div class="col field" style="float: left; padding: 10px 10px 10px 10px">
                     <img th:src="${note.aversPath}" style="max-width: 100%; max-height: 350px"/>
                 </div>
@@ -78,17 +79,14 @@
                     <img th:src="${note.reversePath}" style="max-width: 100%; max-height: 350px"/>
                 </div>
 
-            <div class="container col field" style="padding: 10px 10px 10px 10px">
-<!--                <h2>OPIS</h2>-->
-                <textarea th:text="${note.description}" style="width: 100%; height: 100%; background: darkgray;" disable></textarea>
+                <div class="container col field" style="padding: 10px 10px 10px 10px">
+                    <!--                <h2>OPIS</h2>-->
+                    <textarea th:text="${note.description}" style="width: 100%; height: 100%; background: darkgray;" disable></textarea>
+                </div>
             </div>
+            <hr class="my-2">
+            <a th:replace="fragments/button/_button-edit :: edit(edit = '/note/edit/' + ${note.id})"></a>
         </div>
-<!--        <div>-->
-<!--&lt;!&ndash;            <b th:text="${json}"></b><br>&ndash;&gt;-->
-<!--            <textarea th:text="${json}" rows="15" cols="55" style="font-family: inherit; resize: none; color: black; font-size: x-small" disabled></textarea><br>-->
-
-<!--        </div>-->
-
     </div>
 </body>
 </html>
