--- a/src/main/resources/templates/note/edit.html
+++ b/src/main/resources/templates/note/edit.html
@@ -7,29 +7,33 @@
     <title>Note New</title>
 </head>
 <body>
-<div layout:fragment="content" class="container">
-    <h1 style="text-align: center">NOTE EDIT</h1>
+    <div layout:fragment="content" class="container">
 
-    <form th:action="@{/note/edit}" method="post" th:object="${noteForm}">
-        <div th:replace="note/_form :: form"></div>
-        <p> <input type="submit" value="Zapisz Zmiany" class="btn btn-sm btn-primary"></p>
-    </form>
-    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
-        <div class="col field" style="float: left; padding: 10px 10px 10px 10px">
-            <img th:src="${noteForm.aversPath}" style="max-width: 100%; max-height: 350px"/>
-        </div>
-        <div class="col field" style="float: left; padding: 10px 10px 10px 10px">
-            <img th:src="${noteForm.reversePath}" style="max-width: 100%; max-height: 350px"/>
-        </div>
+        <div class="jumbotron">
+            <h1 class="display-4" style="text-align: center">NOTE EDIT</h1>
+            <hr class="my-2">
+            <form th:action="@{/note/edit}" method="post" th:object="${noteForm}">
+                <div th:replace="note/_form :: form"></div>
+                <p> <input type="submit" value="Zapisz Zmiany" class="btn btn-sm btn-primary"></p>
+            </form>
+            <hr class="my-2">
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
+                <div class="col field" style="float: left; padding: 10px 10px 10px 10px">
+                    <img th:src="${noteForm.aversPath}" style="max-width: 100%; max-height: 350px"/>
+                </div>
+                <div class="col field" style="float: left; padding: 10px 10px 10px 10px">
+                    <img th:src="${noteForm.reversePath}" style="max-width: 100%; max-height: 350px"/>
+                </div>
 
-        <div class="container col field" style="padding: 10px 10px 10px 10px">
+                <div class="container col field" style="padding: 10px 10px 10px 10px">
+                </div>
+            </div>
+            <hr class="my-2">
+            <div style="display: block ruby">
+                <a th:replace="fragments/button/_button-show :: show(show = '/note/show/' + ${noteForm.id})"></a>
+                <a th:replace="fragments/button/_button-back :: back(back = '/note/note_list/?currencySeries=' + ${noteForm.currencies.currencySeries} + '&curId=' + ${noteForm.currencies.id})"></a>
+            </div>
         </div>
     </div>
-    <div class="container" style="display: inline-block">
-        <a th:replace="fragments/button/_button-show :: show(show = '/note/show/' + ${noteForm.id})"></a>
-        <a th:replace="fragments/button/_button-back :: back(back = '/note/note_list/?currencySeries=' + ${noteForm.currencies.currencySeries} + '&curId=' + ${noteForm.currencies.id})"></a>
-    </div>
-
-</div>
 </body>
 </html>
