--- a/src/main/resources/templates/coin/collection/coins.html
+++ b/src/main/resources/templates/coin/collection/coins.html
@@ -8,20 +8,23 @@
     <title>Country</title>
 </head>
 <body>
-    <div layout:fragment="content" class="container" style="background: aliceblue">
-       <H2 style="text-align: center" >COINS COLECTION</H2>
-        <H4 th:text="${coins[0].currencies.currencySeries}" style="text-align: center; background: cornflowerblue" ></H4>
-        <div th:replace="fragments/_flag :: flag(country = ${coins[0].currencies.countries.countryEn})"></div>
-        <div style="display: flex;">
-            <a th:replace="fragments/button/_button-back :: back(back = '/coin/collection/currency/?selectCountryId=' + ${coins[0].currencies.countries.id})"></a>
-        </div>
+    <div layout:fragment="content" class="container">
 
-        <div class="form-row align-items-center">
+        <div class="jumbotron">
+            <h2 class="display-4" style="text-align: center" >COINS COLECTION</H2>
+            <hr class="my-2">
+            <H4 th:text="${coins[0].currencies.currencySeries}" style="text-align: center; background: cornflowerblue" ></H4>
+            <hr class="my-2">
+            <div th:replace="fragments/_flag :: flag(country = ${coins[0].currencies.countries.countryEn})"></div>
+            <hr class="my-2">
+            <div style="display: flex;">
+                <a th:replace="fragments/button/_button-back :: back(back = '/coin/collection/currency/?selectCountryId=' + ${coins[0].currencies.countries.id})"></a>
+            </div>
+            <hr class="my-2">
             <div class="form-row align-items-center">
-                <th:block th:each="coin : ${coins}">
-
+                <div class="form-row align-items-center">
+                    <th:block th:each="coin : ${coins}">
                         <div class="col-auto note-box">
-
                             <div style="display: flex; justify-content: center">
                                 <div th:replace="fragments/_image-midle :: image-midle(image = ${coin.aversPath})"></div>
                                 <div th:replace="fragments/_image-midle :: image-midle(image = ${coin.reversePath})"></div>
@@ -32,7 +35,7 @@
                                 <span th:text="${'Quality: ' + coin.qualities.quality}"></span><br>
                                 <span th:text="${'Status: ' + coin.statuses.status}"></span>
                                 <div sec:authorize="hasAuthority('ADMIN')">
-<!--                                    This content is only shown to ADMIN.-->
+                                    <!--                                    This content is only shown to ADMIN.-->
                                     <p th:text="${'Visible: ' + coin.visible}"></p>
                                 </div>
                                 <div style="margin-bottom: 5px">
@@ -43,12 +46,13 @@
                                 </div>
                             </div>
                         </div>
-                </th:block>
+                    </th:block>
+                </div>
             </div>
-
-        </div>
-        <div th:if="${totalPages} > 1">
-            <div th:replace="fragments/_pagination :: pagination(currencyId = ${coins[0].currencies.id})"></div>
+            <hr class="my-2">
+            <div th:if="${totalPages} > 1">
+                <div th:replace="fragments/_pagination :: pagination(currencyId = ${coins[0].currencies.id})"></div>
+            </div>
         </div>
     </div>
 
