--- a/src/main/resources/templates/coin/collection/index.html
+++ b/src/main/resources/templates/coin/collection/index.html
@@ -8,26 +8,24 @@
 </head>
 <body>
     <div layout:fragment="content" class="container">
-        <div class="container" style="text-align: center; margin-top: 15px">
-<!--            <img th:src="@{'/images/continents/' + ${countryByStatusList[0].continentCode} + '.png'}" style="width: 100px"/><br>-->
-            <h1>country</h1>
-        </div>
-
-        <div class="container">
-            <div class="row">
-                <Block th:each="country : ${countryByStatusList}">
-                    <div class="col-sm-2" style="width: 170px">
-                        <div calss="container" style="margin: 15px; width: 160px">
-                            <a th:href="@{'/coin/collection/currency/?selectCountryId=' + ${country.countryId}}">
-                                <img th:src="@{'/images/flags/' + ${country.countryEn} + '.png'}" style="width: 80px; max-height: 60px"/><br>
-                                <span th:text="${country.countryPl + '(' + country.total + ')'}" style="font-size: small; display: flex"></span>
-                            </a>
+        <div class="jumbotron">
+            <h1 class="display-4" style="text-align: center">Countries</h1>
+            <hr class="my-2">
+            <div class="container">
+                <div class="row">
+                    <Block th:each="country : ${countryByStatusList}">
+                        <div class="col-sm-2" style="width: 170px">
+                            <div calss="container" style="margin: 15px; width: 160px">
+                                <a th:href="@{'/coin/collection/currency/?selectCountryId=' + ${country.countryId}}">
+                                    <img th:src="@{'/images/flags/' + ${country.countryEn} + '.png'}" style="width: 80px; max-height: 60px"/><br>
+                                    <span th:text="${country.countryPl + '(' + country.total + ')'}" style="font-size: small; display: flex"></span>
+                                </a>
+                            </div>
                         </div>
-                    </div>
-                </Block>
+                    </Block>
+                </div>
             </div>
         </div>
     </div>
-
 </body>
 </html>
