--- a/src/main/resources/templates/note/collection/currency.html
+++ b/src/main/resources/templates/note/collection/currency.html
@@ -8,22 +8,26 @@
 </head>
 <body>
     <div layout:fragment="content" class="container">
-       <H2 style="text-align: center">CURRENCY COLECTION</H2>
-        <div th:replace="fragments/_flag :: flag(country = ${currencyByStatusList[0].countryEn})"></div>
-        <div style="display: flex;">
-            <a th:replace="fragments/button/_button-back :: back(back = '/note/collection/country/?selectContinent=' + ${currencyByStatusList[0].continentEn})"></a>
-        </div>
-        <div class="form-row align-items-center">
-            <th:block th:each="currency : ${currencyByStatusList}">
-                <a th:href="@{'/note/collection/notes/?selectCurrencyId=' + ${currency.currencyId} + '&status=KOLEKCJA'}">
-                    <div class="col-auto currency-box ">
-                        <span th:text="${currency.currencySeries}"></span><br>
-                        <span>[[${'(' + currency.total + ')'}]]</span>
-                    </div>
-                </a>
-            </th:block>
+        <div class="jumbotron">
+            <h2 class="display-4" style="text-align: center">CURRENCY COLECTION</H2>
+            <hr class="my-2">
+            <div th:replace="fragments/_flag :: flag(country = ${currencyByStatusList[0].countryEn})"></div>
+            <hr class="my-2">
+            <div style="display: flex;">
+                <a th:replace="fragments/button/_button-back :: back(back = '/note/collection/country/?selectContinent=' + ${currencyByStatusList[0].continentEn})"></a>
+            </div>
+            <hr class="my-2">
+            <div class="form-row align-items-center">
+                <th:block th:each="currency : ${currencyByStatusList}">
+                    <a th:href="@{'/note/collection/notes/?selectCurrencyId=' + ${currency.currencyId} + '&status=KOLEKCJA'}">
+                        <div class="col-auto currency-box ">
+                            <span th:text="${currency.currencySeries}"></span><br>
+                            <span>[[${'(' + currency.total + ')'}]]</span>
+                        </div>
+                    </a>
+                </th:block>
+            </div>
         </div>
     </div>
-
 </body>
 </html>
