--- a/src/main/resources/templates/note/future/notes.html
+++ b/src/main/resources/templates/note/future/notes.html
@@ -25,7 +25,7 @@
                                     <img th:src="${note.aversPath}" style="max-width: 100%; max-height: 150px"/>
                                 </a>
                                 <div class="modal fade" th:attr="id= 'NoteAvers' + ${note.noteId}"  tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                    <div th:replace="note/forSell/_showModal :: showModal(image = ${note.aversPath})"></div>
+                                    <div th:replace="note/future/_showModal :: showModal(image = ${note.aversPath})"></div>
                                 </div>
                             </div>
                             <hr class="my-2" style="border-color: black; width: 100%">
@@ -34,7 +34,7 @@
                                     <img th:src="${note.reversePath}" style="max-width: 100%; max-height: 150px"/>
                                 </a>
                                 <div class="modal fade" th:attr="id= 'NoteReverse' + ${note.noteId}"  tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                    <div th:replace="note/forSell/_showModal :: showModal(image = ${note.reversePath})"></div>
+                                    <div th:replace="note/future/_showModal :: showModal(image = ${note.reversePath})"></div>
                                 </div>
                             </div>
                             <hr class="my-2" style="border-color: black; width: 100%">
