Dodano przycis edycji w nowych banknotach LOC

--- a/src/main/resources/templates/note/newNote/loc.html
+++ b/src/main/resources/templates/note/newNote/loc.html
@@ -27,7 +27,7 @@
                         <th>Sum</th>
                         <th>Bought</th>
                         <th>Image</th>
-                        <!--                    <th style="width: 156px">Akcja</th>-->
+                        <th style="width: 150px">Akcja</th>
                     </tr>
                     </thead>
                     <tbody th:with="totalPrice=0">
@@ -50,11 +50,11 @@
                                     <div th:replace="fragments/_image-small :: image-small(image = ${note.reversePath})"></div>
                                 </div>
                             </td>
-                            <!--                        <td class="pt-1 pb-1">-->
+                                                    <td class="pt-1 pb-1">
                             <!--                            <a th:href="@{'/note/show/' + ${note.id}}" class="btn btn-sm btn-info" style="font-size: 10px">SHOW</a>-->
-                            <!--                            <a th:href="@{'/note/edit/' + ${note.id}}" class="btn btn-sm btn-primary" style="font-size: 10px">EDIT</a>-->
+                                                        <a th:href="@{'/note/edit/' + ${note.noteId}}" class="btn btn-sm btn-primary" style="font-size: 10px">EDIT</a>
                             <!--                            <a th:href="@{'/note/delete/' + ${note.id}}" class="btn btn-sm btn-danger" style="font-size: 10px">DELETE</a>-->
-                            <!--                        </td>-->
+                                                    </td>
                         </tr>
                     </Block>
                     </tbody>
