--- a/src/main/resources/templates/bought/new.html
+++ b/src/main/resources/templates/bought/new.html
@@ -7,14 +7,18 @@
     <title>New Bought</title>
 </head>
 <body>
-<div layout:fragment="content" class="container">
-    <h1 style="text-align: center">Bought NEW</h1>
-
-    <form th:action="@{/bought/new}" method="post" th:object="${boughtForm}">
-        <div th:replace="bought/_form :: form"></div>
-        <p> <input type="submit" value="Dodaj" class="btn btn-sm btn-primary"></p>
-    </form>
-
-</div>
+    <div layout:fragment="content" class="container">
+        <div class="jumbotron">
+            <h1 class="display-4" style="text-align: center">Bought NEW</h1>
+            <hr class="my-2">
+            <form th:action="@{/bought/new}" method="post" th:object="${boughtForm}">
+                <div th:replace="bought/_form :: form"></div>
+                <p> <input type="submit" value="Dodaj" class="btn btn-sm btn-primary"></p>
+            </form>
+            <div>
+                <a th:replace="fragments/button/_button-back :: back(back = '/bought')"></a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
