Poprawki wyglądu wyboru państwa Currency poprawa wyglądu tabeli w currency podział na kolory Pattern Poprawki wyglądu wyboru państwa w new note Poprawki wyglądu wyboru państwa w new coin

--- a/src/main/resources/static/css/my_style.css
+++ b/src/main/resources/static/css/my_style.css
@@ -37,6 +37,17 @@ body
 {
     text-align: center;
 }
+
+.NOTE
+{
+    background: #2fff50d9;
+}
+
+.COIN
+{
+    background: #53b2ff87;
+}
+
 /*.stopka*/
 /*{*/
 /*    background-color: #bfbfbf;*/
