--- a/src/main/resources/templates/note/collection/index.html
+++ b/src/main/resources/templates/note/collection/index.html
@@ -8,22 +8,24 @@
 </head>
 <body>
     <div layout:fragment="content" class="container">
-        <h1 style="text-align: center">CONTINENT</h1>
-        <div class="container">
-            <div class="row">
-                <Block th:each="continent : ${continents}">
-                    <div class="col-sm-2" style="text-align: center; max-width: 100%">
-                        <div calss="container" style="margin: 15px">
-                            <a th:href="@{'/note/collection/country/?selectContinent=' + ${continent.continentEn}}">
-                                <img th:src="@{'/images/continents/' + ${continent.code} + '.png'}" style="width: 150px"/>
-                            </a><br>
-<!--                            <span th:text="${continent.total}"></span>-->
+        <div class="jumbotron">
+            <h1 class="display-4" style="text-align: center">CONTINENT</h1>
+            <hr class="my-2">
+            <div class="container">
+                <div class="row">
+                    <Block th:each="continent : ${continents}">
+                        <div class="col-sm-2" style="text-align: center; max-width: 100%">
+                            <div calss="container" style="margin: 15px">
+                                <a th:href="@{'/note/collection/country/?selectContinent=' + ${continent.continentEn}}">
+                                    <img th:src="@{'/images/continents/' + ${continent.code} + '.png'}" style="width: 150px"/>
+                                </a><br>
+                                <!--                            <span th:text="${continent.total}"></span>-->
+                            </div>
                         </div>
-                    </div>
-                </Block>
+                    </Block>
+                </div>
             </div>
         </div>
     </div>
-
 </body>
 </html>
