--- a/src/main/resources/templates/note/show.html
+++ b/src/main/resources/templates/note/show.html
@@ -11,6 +11,10 @@
         <div class="jumbotron">
             <h1 class="display-4" style="text-align: center">NOTE SHOW</h1>
             <hr class="my-2">
+            <div style="text-align: center">
+                <h3 th:text="${note.currencies.currencySeries}"></h3>
+            </div>
+            <hr class="my-2">
             <div class="container" style="display: inline-block">
                 <a th:replace="fragments/button/_button-back :: back(back = '/note/note_list/?currencySeries=' + ${note.currencies.currencySeries} + '&curId=' + ${note.currencies.id})"></a>
 
