Dodano usuwanie klienta z bazy danych dodano potwierdzenei usuwania elementu z bazy danych

--- a/src/main/resources/templates/customer/_form.html
+++ b/src/main/resources/templates/customer/_form.html
@@ -3,7 +3,7 @@
     <div class="form-row align-items-center">
         <div class="col-md-4">
             <label>Unique Id</label><br>
-            <input class="form-control form-control-sm mb-2" type="text" th:field="*{uniqueId}" placeholder="Unique Id" />
+            <input class="form-control form-control-sm mb-2" type="text" th:field="*{uniqueId}" placeholder="Unique Id" readonly />
         </div>
         <div class="col-auto" style="text-align: center;background: darkcyan;">
             <label class="m-0">Active</label><br>
